# game-of-life

./: Cargo.toml
assets/: ui.ron
assets/prefabs/: cell.ron
config/: cell_display.ron  display.ron  input.ron
src/: camera.rs  cell.rs  debug.rs  main.rs
