[package]
name = "game-of-life"
version = "0.1.0"
authors = ["tony84727 <tony84727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.0"

[features]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
